--- a/Workshop2/Workshop2.csproj
+++ b/Workshop2/Workshop2.csproj
@@ -42,7 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="controller\placeholder.cs" />
+    <Compile Include="controller\Menucontroller.cs" />
     <Compile Include="model\holderplacer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
