--- a/Workshop2/Workshop2.csproj
+++ b/Workshop2/Workshop2.csproj
@@ -43,6 +43,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="controller\placeholder.cs" />
+    <Compile Include="model\Boat.cs" />
+    <Compile Include="model\Member.cs" />
+    <Compile Include="model\MemberDAL.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="view\Menuview.cs" />
@@ -68,7 +71,6 @@
     <Content Include="obj\Debug\Workshop2.pdb" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="model\" />
     <Folder Include="obj\Debug\TempPE\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
